src/objects/DNBI__Credit_Decision_History__c.object
<CustomObject>
    <description>This custom object hold the Credit Decision Section history records</description>
    <fields>
        <fullName>DNBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Decision History</relationshipLabel>
        <relationshipName>Credit_Decision_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Credit Decision History</relationshipLabel>
        <relationshipName>Credit_Decision_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Created_Date__c</fullName>
        <label>Application Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_ID__c</fullName>
        <label>D&amp;B Application ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Modified_Date__c</fullName>
        <label>Application Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Company_Name__c</fullName>
        <label>D&amp;B Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Limit__c</fullName>
        <label>Recommended Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Term_Status__c</fullName>
        <label>Credit Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Early_Payment_Discount__c</fullName>
        <label>Early Payment Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Requested_Amount__c</fullName>
        <label>Credit Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Credit Decision History</relationshipLabel>
        <relationshipName>Credit_Decision_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Decision History</relationshipLabel>
        <relationshipName>Credit_Decision_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit Decision History</label>
    <listViews>
        <fullName>DNBI__All</fullName>
        <columns>NAME</columns>
        <columns>DNBI__DnB_Application_ID__c</columns>
        <columns>DNBI__Account__c</columns>
        <columns>DNBI__Lead__c</columns>
        <columns>DNBI__Opportunity__c</columns>
        <columns>DNBI__Contract__c</columns>
        <columns>DNBI__DnB_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Credit Decision History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Decision History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>